# cutlass-gf-gemm

./: .gitignore  .gitmodules  CMakeLists.txt  IMPLEMENTATION_NOTES.md  README.md
examples/: example_gf_gemm.cu
include/: cutlass_gf_gemm.h  gf16.h  gf_ops.h
src/: cutlass_gf_gemm.cu
tests/: test_const_mem.cu  test_cpu_gf.cu  test_debug_accum.cu  test_full_gemm.cu  test_gemm_debug.cu  test_gf_gemm.cu  test_init.cu  test_kernel_gf.cu  test_smem_debug.cu  test_xor.cu  verify_gf.py
